Old Makefile for CLI fixed.

--- a/mesh/Makefile
+++ b/mesh/Makefile
@@ -26,7 +26,8 @@ CXXFLAGS     += -c ${BUILDINFO} -std=c++17 -pipe -Os -mfpmath=sse -msse2 -W -Wal
 		-D_GLIBCXX_ASSERTIONS -fasynchronous-unwind-tables -fexceptions -fpie -fstack-protector-strong #\
 		-fsanitize=address -fsanitize=leak -fsanitize=undefined
 LDFLAGS	     += -lpthread #-fsanitize=address -fsanitize=leak -fsanitize=undefined
-GMESHOBJECTS = geodentry.o bitflagarray.o primitive.o vertex.o vertexofface.o face.o sphere.o rectbox.o line.o \
+GMESHOBJECTS = geodentry.o bitflagarray.o \
+               primitive.o vertex.o vertexofface.o face.o sphere.o rectbox.o line.o \
                showprogress.o userinteraction.o printbuildinfo.o \
                polyline.o polyedge.o plane.o \
                triangularprism.o cube.o \
@@ -35,9 +36,11 @@ GMESHOBJECTS = geodentry.o bitflagarray.o primitive.o vertex.o vertexofface.o fa
                meshio.o meshseedext.o mesh_params.o \
                vector3d.o matrix4d.o voxelfilter25d.o \
                meshinfodata.o \
-			   ../normalSphereSelection/IcoSphereTree.o \
-			   ../logging/Logging.o \
-			   ../logging/Logger.o
+               ../normalSphereSelection/IcoSphereTree.o \
+               ../logging/Logging.o \
+               ../logging/Logger.o \
+               MeshIO/MeshReader.o MeshIO/MeshWriter.o MeshIO/ModelMetaData.o MeshIO/MtlParser.o MeshIO/ObjReader.o MeshIO/ObjWriter.o \
+               MeshIO/PlyReader.o MeshIO/PlyWriter.o MeshIO/RegularGridTxtReader.o MeshIO/TxtReader.o MeshIO/TxtWriter.o MeshIO/VRMLWriter.o 
 GMESHHEADERS = gmcommon.h geodentry.h bitflagarray.h primitive.h vertex.h vertexofface.h face.h sphere.h rectbox.h line.h \
                showprogress.h userinteraction.h printbuildinfo.h \
                polyline.h polyedge.h plane.h \
@@ -48,11 +51,13 @@ GMESHHEADERS = gmcommon.h geodentry.h bitflagarray.h primitive.h vertex.h vertex
                meshio.h meshseedext.h mesh_params.h \
                vector3d.h matrix4d.h voxelfilter25d.h \
                meshinfodata.h \
-			   ../normalSphereSelection/IcoSphereTree.h \
-			   ../logging/Logging.h \
-			   ../logging/Logger.h
+               ../normalSphereSelection/IcoSphereTree.h \
+               ../logging/Logging.h \
+               ../logging/Logger.h \
+               MeshIO/MeshReader.h MeshIO/MeshWriter.h MeshIO/ModelMetaData.h MeshIO/MtlParser.h MeshIO/ObjReader.h MeshIO/ObjWriter.h MeshIO/PlyEnums.h \
+               MeshIO/PlyReader.h MeshIO/PlyWriter.h MeshIO/RegularGridTxtReader.h MeshIO/TxtReader.h MeshIO/TxtWriter.h MeshIO/VRMLWriter.h
 
-TIFFLIB = -ltiff
+#TIFFLIB = -ltiff
 
 #==========================================================================
 # Build on Ubuntu 18.04 LTS having gcc in version 7 as default:
@@ -66,7 +71,7 @@ all: mesh \
      gigamesh-info \
      meshgeneratefeaturevectors25d \
      gigamesh-featurevectors \
-     matrix4d vector3d image2d voxelcuboid face
+     matrix4d vector3d voxelcuboid face
 
 package-files: \
      gigamesh-featurevectors \
@@ -75,28 +80,28 @@ package-files: \
      gigamesh-borders \
      gigamesh-info
 
-gigamesh-tolegacy: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads.o gigamesh-tolegacy.o voxelcuboid.o image2d.o Makefile
-	$(CXX) $(TIFFLIB) -pthread -o gigamesh-tolegacy $(GMESHOBJECTS) mesh_threads.o gigamesh-tolegacy.o voxelcuboid.o image2d.o -lstdc++fs $(LDFLAGS)
+gigamesh-tolegacy: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads.o gigamesh-tolegacy.o voxelcuboid.o  Makefile
+	$(CXX) $(TIFFLIB) -pthread -o gigamesh-tolegacy $(GMESHOBJECTS) mesh_threads.o gigamesh-tolegacy.o voxelcuboid.o  -lstdc++fs $(LDFLAGS)
 	./gigamesh-tolegacy --version
 	
-gigamesh-borders: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads.o gigamesh-borders.o voxelcuboid.o image2d.o Makefile
-	$(CXX) $(TIFFLIB) -pthread -o gigamesh-borders $(GMESHOBJECTS) mesh_threads.o gigamesh-borders.o voxelcuboid.o image2d.o -lstdc++fs $(LDFLAGS)
+gigamesh-borders: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads.o gigamesh-borders.o voxelcuboid.o  Makefile
+	$(CXX) $(TIFFLIB) -pthread -o gigamesh-borders $(GMESHOBJECTS) mesh_threads.o gigamesh-borders.o voxelcuboid.o  -lstdc++fs $(LDFLAGS)
 	./gigamesh-borders --version
 
-gigamesh-clean: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads_psalm.o gigamesh-clean.o voxelcuboid.o image2d.o printbuildinfo.o Makefile
-	$(CXX) $(TIFFLIB) -pthread -o gigamesh-clean $(GMESHOBJECTS) mesh_threads_psalm.o gigamesh-clean.o voxelcuboid.o image2d.o ../external/libpsalmBoostless/libpsalm.a -lstdc++fs $(LDFLAGS)
+gigamesh-clean: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads_psalm.o gigamesh-clean.o voxelcuboid.o  printbuildinfo.o Makefile
+	$(CXX) $(TIFFLIB) -pthread -o gigamesh-clean $(GMESHOBJECTS) mesh_threads_psalm.o gigamesh-clean.o voxelcuboid.o  ../external/libpsalmBoostless/build/libpsalm.a -lstdc++fs $(LDFLAGS)
 	./gigamesh-clean --version
 
-gigamesh-info:  $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads.o gigamesh-info.o voxelcuboid.o image2d.o printbuildinfo.o Makefile
-	$(CXX) $(TIFFLIB) -pthread -o gigamesh-info $(GMESHOBJECTS) mesh_threads.o gigamesh-info.o voxelcuboid.o image2d.o -lstdc++fs $(LDFLAGS)
+gigamesh-info:  $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh_threads.o gigamesh-info.o voxelcuboid.o  printbuildinfo.o Makefile
+	$(CXX) $(TIFFLIB) -pthread -o gigamesh-info $(GMESHOBJECTS) mesh_threads.o gigamesh-info.o voxelcuboid.o  -lstdc++fs $(LDFLAGS)
 	./gigamesh-info --version
 
-meshgeneratefeaturevectors25d: $(GMESHOBJECTS) $(GMESHHEADERS) mesh.o meshgeneratefeaturevectors25d.o image2d.o
-	$(CXX) $(TIFFLIB)          -o meshgeneratefeaturevectors25d         $(GMESHOBJECTS) meshgeneratefeaturevectors25d.o         image2d.o mesh.o -lstdc++fs $(LDFLAGS)
+meshgeneratefeaturevectors25d: $(GMESHOBJECTS) $(GMESHHEADERS) mesh.o meshgeneratefeaturevectors25d.o 
+	$(CXX) $(TIFFLIB)          -o meshgeneratefeaturevectors25d         $(GMESHOBJECTS) meshgeneratefeaturevectors25d.o          mesh.o -lstdc++fs $(LDFLAGS)
 
 # multi-threaded version fo meshgeneratefeaturevectors25d
-gigamesh-featurevectors:  $(GMESHOBJECTS) $(GMESHHEADERS) mesh_threads.o meshgeneratefeaturevectors25d_threads.o image2d.o
-	$(CXX) $(TIFFLIB) -pthread -o gigamesh-featurevectors               $(GMESHOBJECTS) meshgeneratefeaturevectors25d_threads.o image2d.o mesh_threads.o -lstdc++fs $(LDFLAGS)
+gigamesh-featurevectors:  $(GMESHOBJECTS) $(GMESHHEADERS) mesh_threads.o meshgeneratefeaturevectors25d_threads.o 
+	$(CXX) $(TIFFLIB) -pthread -o gigamesh-featurevectors               $(GMESHOBJECTS) meshgeneratefeaturevectors25d_threads.o  mesh_threads.o -lstdc++fs $(LDFLAGS)
 
 meshgeneratefeaturevectors25d.o: meshgeneratefeaturevectors25d.cpp
 	$(CXX) -I. -I..           $(CFLAGS) meshgeneratefeaturevectors25d.cpp -o meshgeneratefeaturevectors25d.o
@@ -108,8 +113,8 @@ meshgeneratefeaturevectors25d_threads.o: meshgeneratefeaturevectors25d.cpp
 # For testing
 #-------------------------------------------------------------------------
 
-mesh: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh.o mesh_main.o voxelcuboid.o image2d.o Makefile
-	$(CXX) $(TIFFLIB) -o mesh $(GMESHOBJECTS) mesh.o mesh_main.o voxelcuboid.o image2d.o -lstdc++fs $(LDFLAGS)
+mesh: $(GMESHOBJECTS) $(GMESHHEADERS) vector3d.h octree.h octnode.h mesh.o mesh_main.o voxelcuboid.o  Makefile
+	$(CXX) $(TIFFLIB) -o mesh $(GMESHOBJECTS) mesh.o mesh_main.o voxelcuboid.o  -lstdc++fs $(LDFLAGS)
 
 #-------------------------------------------------------------------------
 # Mesh with and without Multi-threading and libpsalm
@@ -162,8 +167,10 @@ matrix4d: matrix4d.o matrix4d_main.o vector3d.o vector3d.h matrix4d.h
 	$(CXX) -o matrix4d matrix4d.o matrix4d_main.o vector3d.o $(LDFLAGS)
 
 face:   face.o face_main.o vertex.o vertexofface.o primitive.o plane.o vector3d.o matrix4d.o geodentry.o edgegeodesic.o bitflagarray.o line.o \
-        edgegeodesic.h geodentry.h face.h vertex.h vertexofface.h primitive.h plane.h vector3d.h matrix4d.h bitflagarray.h line.h
-	$(CXX) -o face face.o face_main.o vertex.o vertexofface.o primitive.o plane.o vector3d.o matrix4d.o geodentry.o edgegeodesic.o bitflagarray.o line.o $(LDFLAGS)
+        ../logging/Logging.o ../logging/Logger.o \
+        edgegeodesic.h geodentry.h face.h vertex.h vertexofface.h primitive.h plane.h vector3d.h matrix4d.h bitflagarray.h line.h \
+        ../logging/Logging.h ../logging/Logger.h 
+	$(CXX) -o face face.o face_main.o vertex.o vertexofface.o primitive.o plane.o vector3d.o matrix4d.o geodentry.o edgegeodesic.o bitflagarray.o line.o ../logging/Logging.o ../logging/Logger.o $(LDFLAGS)
 
 vector3d: matrix4d.o vector3d.o vector3d_main.o vector3d.h matrix4d.h
 	$(CXX) -o vector3d vector3d.o vector3d_main.o matrix4d.o $(LDFLAGS)
@@ -179,8 +186,8 @@ face_main.o:
 
 #--- voxels ------------------------------------------------------------------
 
-voxelcuboid: voxelcuboid_main.o voxelcuboid.o image2d.o vector3d.o matrix4d.o
-	$(CXX) $(TIFFLIB) -I. -I.. -I../voxel -o voxelcuboid voxelcuboid_main.o voxelcuboid.o image2d.o vector3d.o matrix4d.o $(LDFLAGS)
+voxelcuboid: voxelcuboid_main.o voxelcuboid.o  vector3d.o matrix4d.o
+	$(CXX) $(TIFFLIB) -I. -I.. -I../voxel -o voxelcuboid voxelcuboid_main.o voxelcuboid.o  vector3d.o matrix4d.o $(LDFLAGS)
 
 voxelcuboid_main.o:
 	$(CXX) -I. -I.. -I../voxel $(CFLAGS) ../voxel/voxelcuboid_main.c -o voxelcuboid_main.o $(LDFLAGS)
@@ -188,21 +195,10 @@ voxelcuboid_main.o:
 voxelcuboid.o:
 	$(CXX) -I. -I../voxel $(CFLAGS) ../voxel/voxelcuboid.cpp -o voxelcuboid.o $(LDFLAGS)
 
-#--- images ------------------------------------------------------------------
-
-image2d: image2d.o image2d_main.o
-	$(CXX) $(TIFFLIB) -o image2d image2d.o image2d_main.o $(LDFLAGS)
-
-image2d_main.o:
-	$(CXX) -I. -I.. $(CFLAGS) ../image2d_main.c -o image2d_main.o $(LDFLAGS)
-
-image2d.o:
-	$(CXX) -I. -I.. $(CFLAGS) ../image2d.cpp -o image2d.o $(LDFLAGS)
-
 #--- CLEAN ------------------------------------------------------------------
 
 clean:
-	rm -f *.o *.a *.linkinfo a.out *~ image2d matrix4d mesh vector3d voxelcuboid
+	rm -f *.o *.a *.linkinfo a.out *~ matrix4d mesh vector3d voxelcuboid
 	rm -f triangle/*.o
 	rm -f gigamesh-tolegacy
 	rm -f gigamesh-borders
