--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,3 +62,9 @@ endif()
 if(NOT GIGAMESH_CLT_ONLY)
 add_subdirectory(gui)
 endif()
+
+if(NOT TESTS_DISABLED)
+	include(CTest)
+	enable_testing()
+	add_subdirectory(core/tests)
+endif()
