--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,9 @@ set(CATCH_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/3rdParty/catch)
 add_library(Catch INTERFACE)
 target_include_directories(Catch INTERFACE ${CATCH_INCLUDE_DIR})
 
-add_executable(gigameshCore_tests ${CMAKE_CURRENT_SOURCE_DIR}/testsMain.cpp ${CMAKE_CURRENT_SOURCE_DIR}/mesh_tests.cpp)
+add_executable(gigameshCore_tests ${CMAKE_CURRENT_SOURCE_DIR}/testsMain.cpp
+									${CMAKE_CURRENT_SOURCE_DIR}/mesh_tests.cpp
+									${CMAKE_CURRENT_SOURCE_DIR}/meshIO_tests.cpp)
 target_link_libraries(gigameshCore_tests PRIVATE Catch gigameshCore)
 
 add_test(NAME GigameshCoreTests COMMAND gigameshCore_tests WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/..)
