--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,26 +108,23 @@ manjaro arch:
       - build/cli/gigamesh-clean
       - build/cli/gigamesh-info
       - build/cli/gigamesh-borders
+      - build/tests/gigameshCore_tests
     expire_in: 4 hours
- 
+
+# this can be improved by adding manjaro arch as dependency
+# however, than we also need to pass test-data...
 manjaro arch test:
   # Use latest manjaro release
   image: archlinux/base
   stage: test
+  dependencies:
+    - manjaro arch
   # install the necessary build tools when needed
   before_script: 
    - pacman -Sy
    - pacman -S gcc glibc cmake boost unzip qtcreator make cairo git --noconfirm
   script:
     - export QT_SELECT=qt5
-
-    # build gigamesh
-    - mkdir build
-    - cd build
-    - cmake .. -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
-    - make -j
-    - cd ..
-    # run test
     - build/tests/gigameshCore_tests -o report.xml -r junit
 
   artifacts:
