CMake update: - more consistency across files - target install revision - reduced compiled files for alglib to reduce build times - changed free variables into options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,14 @@ project(GigaMesh LANGUAGES CXX C)
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+option(BUILD_CLI "Build the GigaMesh-CLI tools" ON)
+option(BUILD_GUI "Build GigaMesh-GUI" ON)
+option(ENABLE_TESTS "Build tests" ON)
+
+#--------- get git version and other useful information ---------
 string(TIMESTAMP COMP_DATE "%d.%b.%y")
 execute_process(COMMAND git rev-parse HEAD
                 WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
@@ -49,21 +57,23 @@ elseif(MSVC)
 	string(SUBSTRING "${WHOAMIVAR}" "${SLASHPOS}" -1 USER_VAR)
 	string(CONCAT COMP_USER ${USER_VAR} @ ${HOST_VAR})
 endif()
+#-------------------------------------------------------------
 
 add_subdirectory(external)
 add_subdirectory(core)
 
-#set this via cmake <path to this CMakeLists.txt> -DGIGAMESH_GUI_ONLY=1
-if(NOT GIGAMESH_GUI_ONLY)
+#disable CLI build by setting -DBUILD_CLI=OFF, or editing the variable in CMakeCache.txt
+if(BUILD_CLI)
 add_subdirectory(cli)
 endif()
 
-#set this via cmake <path to this CMakeLists.txt> -DGIGAMESH_CLT_ONLY=1
-if(NOT GIGAMESH_CLT_ONLY)
+#disable GUI build by setting -DBUILD_GUI=OFF, or editing the variable in CMakeCache.txt
+if(BUILD_GUI)
 add_subdirectory(gui)
 endif()
 
-if(NOT TESTS_DISABLED)
+#disable test build by setting -DENABLE_TESTS=OFF, or editing the variable in CMakeCache.txt
+if(ENABLE_TESTS)
 	include(CTest)
 	add_subdirectory(tests)
 endif()
