- added license text file - moved license text from readme to license text file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,6 +83,7 @@ install(FILES	CHANGELOG
 				README.md
 				README_LIBPSALM.txt
 				COPYING.txt
+				LICENSE.txt
 		DESTINATION doc/gigamesh)
 
 #CPack, see: https://cmake.org/cmake/help/v3.10/module/CPack.html
