--- a/packaging/debian/control
+++ b/packaging/debian/control
@@ -1,5 +1,5 @@
 Source: gigamesh
-Section: misc
+Section: science
 Priority: optional
 Maintainer: Felix Feldmann <felix.feldmann@iwr.uni-heidelberg.de>
 Build-Depends: debhelper (>= 9)
