--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required(VERSION 3.10)
 add_subdirectory(libpsalm)
 add_subdirectory(spherical_intersection)
 add_subdirectory(libAlg)
+add_subdirectory(triangle)
