--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ windows:
     - mkdir build
     - cd build
     - x86_64-w64-mingw32.static-cmake .. -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles" -DMINGW_CI_BUILD=1
-    - make -j
+    - make
     - strip gui/gigamesh.exe
     - strip cli/gigamesh-featurevectors.exe
     - strip cli/gigamesh-tolegacy.exe
@@ -57,7 +57,7 @@ ubuntu bionic:
     - mkdir build
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
-    - make -j
+    - make
     - strip gui/gigamesh
     - strip cli/gigamesh-featurevectors
     - strip cli/gigamesh-tolegacy
@@ -91,7 +91,7 @@ manjaro arch:
     - mkdir build
     - cd build
     - cmake .. -DCMAKE_BUILD_TYPE=Release -G"Unix Makefiles"
-    - make -j
+    - make
     - strip gui/gigamesh
     - strip cli/gigamesh-featurevectors
     - strip cli/gigamesh-tolegacy
