--- a/cli/spherical_intersection_cli/object_io/CMakeLists.txt
+++ b/cli/spherical_intersection_cli/object_io/CMakeLists.txt
@@ -1,8 +1,7 @@
-cmake_minimum_required (VERSION 3.1)
-set (CMAKE_CXX_STANDARD 17)
+cmake_minimum_required (VERSION 3.10)
+
 project (Object_IO VERSION 1.0.0 DESCRIPTION "A simple mesh input output library")
-add_library(object_io src/obj.cpp src/ply.cpp)
+add_library(object_io STATIC src/obj.cpp src/ply.cpp)
+target_compile_features(object_io PUBLIC cxx_std_17)
 target_include_directories(object_io PRIVATE include)
 
-target_compile_options(object_io PRIVATE "$<$<CONFIG:Debug>:${DEBUG_OPTIONS}>")
-target_compile_options(object_io PRIVATE "$<$<CONFIG:Release>:${RELEASE_OPTIONS}>")
