--- a/cli/spherical_intersection_cli/timer/CMakeLists.txt
+++ b/cli/spherical_intersection_cli/timer/CMakeLists.txt
@@ -1,8 +1,6 @@
-cmake_minimum_required (VERSION 3.1)
-set (CMAKE_CXX_STANDARD 17)
-project (Timer VERSION 1.0.0 DESCRIPTION "A simple timer library")
-add_library(timer src/timer.cpp)
-target_include_directories(timer PRIVATE include)
+cmake_minimum_required (VERSION 3.10)
 
-target_compile_options(timer PRIVATE "$<$<CONFIG:Debug>:${DEBUG_OPTIONS}>")
-target_compile_options(timer PRIVATE "$<$<CONFIG:Release>:${RELEASE_OPTIONS}>")
+project (Timer VERSION 1.0.0 DESCRIPTION "A simple timer library")
+add_library(timer STATIC src/timer.cpp)
+target_compile_features(timer PUBLIC cxx_std_17)
+target_include_directories(timer PRIVATE include)
